--- a/views/add.hbs
+++ b/views/add.hbs
@@ -17,5 +17,7 @@
         <span class="helper-text" data-error="wrong"></span>
     </div>
 
-    <button class="btn btn-prymary">Submit</button>
+  <input type="hidden" name="_csrf" value="{{csrf}}">
+
+  <button class="btn btn-prymary">Submit</button>
 </form>
