--- a/views/card.hbs
+++ b/views/card.hbs
@@ -16,7 +16,7 @@
                     <td>{{title}}</td>
                     <td>{{count}}</td>
                     <td>
-                        <button class="btn btn-small js-remove red" data-id="{{id}}">Delete</button>
+                        <button class="btn btn-small js-remove red" data-id="{{id}}" data-csrf="{{@root.csrf}}">Delete</button>
                     </td>
                 </tr>
             {{/each}}
@@ -25,6 +25,8 @@
         <p><strong>Price: </strong><span class="price">{{price}}</span></p>
 
       <form action="orders" method="POST">
+        <input type="hidden" name="_csrf" value="{{csrf}}">
+
         <button type="submit" class="btn">Order</button>
       </form>
     {{else}}
