--- a/views/course-edit.hbs
+++ b/views/course-edit.hbs
@@ -20,12 +20,14 @@
   </div>
 
   <input type="hidden" name="id" value="{{course._id}}">
+  <input type="hidden" name="_csrf" value="{{csrf}}">
 
   <button class="btn btn-primary">Edit</button>
 </form>
 
 <form action="/courses/remove" method="POST" >
   <input type="hidden" name="id" value="{{course._id}}">
+  <input type="hidden" name="_csrf" value="{{csrf}}">
 
   <button class="btn red">Delete</button>
 </form>
