--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -7,6 +7,11 @@
       </ul>
     </div>
     <div id="login" class="col s6 offset-s3">
+
+      {{#if loginError}}
+        <p class="alert">{{loginError}}</p>
+      {{/if}}
+
       <h1>Log in shop</h1>
       <form action="/auth/login" method="POST">
         <div class="input-field">
@@ -21,11 +26,19 @@
           <span class="helper-text" data-error="wrong password"></span>
         </div>
 
+        <input type="hidden" name="_csrf" value="{{csrf}}">
+
         <button type="submit" class="btn btn-prymary">Submit</button>
       </form>
     </div>
+
+
     <div id="register" class="col s6 offset-s3">
-      <h1>Sing in shop</h1>
+      {{#if regError}}
+        <p class="alert">{{regError}}</p>
+      {{/if}}
+
+      <h1>Create an account</h1>
       <form action="/auth/register" method="POST">
         <div class="input-field">
           <input id="remail" name="email" type="email" class="validate" required>
@@ -45,7 +58,15 @@
           <span class="helper-text" data-error="wrong password"></span>
         </div>
 
-        <button type="submit" class="btn btn-prymary">Registration</button>
+        <div class="input-field">
+          <input id="name" name="name" type="password" class="validate" required >
+          <label for="name">Name</label>
+          <span class="helper-text" data-error="type name"></span>
+        </div>
+
+        <input type="hidden" name="_csrf" value="{{csrf}}">
+
+        <button type="submit" class="btn btn-primary">Registration</button>
       </form>
     </div>
   </div>
